# tutorials

./: .gitignore
django-strawberry/: requirements.txt
django-strawberry/myStrawberry/: manage.py
django-strawberry/myStrawberry/myStrawberry/: asgi.py  settings.py  urls.py  wsgi.py
django-strawberry/myStrawberry/strawberry_app/: apps.py  models.py  schema.py  types.py
django/mysite/: db.sqlite3
django/mysite/mysite/: settings.py
django/mysite/polls/: models.py  tests.py  urls.py  views.py
django/mysite/polls/migrations/: 0001_initial.py  0002_rename_choice_cacadecaconi.py  0003_rename_cacadecaconi_choice.py
django/mysite/polls/static/polls/: style.css
django/mysite/polls/templates/polls/: detail.html  (+2 more)
rest_framework/: requirements.txt
rest_framework/snippet_tutorial/: db.sqlite3  manage.py
rest_framework/snippet_tutorial/snippet_tutorial/: asgi.py  settings.py  urls.py  wsgi.py
rest_framework/snippet_tutorial/snippets/: models.py  permissions.py  serializers.py  urls.py  views.py
rest_framework/snippet_tutorial/snippets/migrations/: 0001_initial.py
rest_framework/tutorial/: db.sqlite3
rest_framework/tutorial/quickstart/: serializers.py  views.py
rest_framework/tutorial/tutorial/: settings.py  urls.py
strawberry-django/: requirements.txt
strawberry-django/demoproject/: db.sqlite3  pyproject.toml
strawberry-django/demoproject/demoproject/: models.py  schema.py  settings.py  types.py  urls.py
strawberry-django/demoproject/demoproject/fixtures/: berries.json
strawberry-django/demoproject/demoproject/migrations/: 0001_initial.py
